--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Psychiatry Quiz - Set B</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Psychiatry Quiz - Set C</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -74,253 +74,253 @@
   </div>
 
   <div class="quiz-container" id="quiz-section">
-    <h2>Psychiatry NAPLEX Quiz - Version B</h2>
+    <h2>Psychiatry NAPLEX Quiz - Version C</h2>
     <form id="quiz-form"></form>
     <button type="button" onclick="submitQuiz()">Submit Quiz</button>
     <div class="results" id="results"></div>
   </div>
 
-  <script>
-    const PASSWORD = "pharm2025";
-    function checkPassword() {
-      const input = document.getElementById("quiz-password").value;
-      if (input === PASSWORD) {
-        document.getElementById("password-section").style.display = "none";
-        document.getElementById("quiz-section").style.display = "block";
-        loadQuiz();
-      } else {
-        document.getElementById("password-error").style.display = "block";
-      }
+<script>
+  const PASSWORD = "pharm2025";
+  function checkPassword() {
+    const input = document.getElementById("quiz-password").value;
+    if (input === PASSWORD) {
+      document.getElementById("password-section").style.display = "none";
+      document.getElementById("quiz-section").style.display = "block";
+      loadQuiz();
+    } else {
+      document.getElementById("password-error").style.display = "block";
     }
+  }
 
-    const quizData = [
+  const quizData = [
 {
-  question: "Which medication is most commonly associated with increased risk of metabolic acidosis via renal bicarbonate wasting?",
-  options: ["Tegretol", "Lamictal", "Topamax", "Keppra"],
-  answer: 2,
-  rationale: "Topiramate causes bicarbonate loss through the kidneys, leading to metabolic acidosis."
-},
-{
-  question: "Which antidepressant has the strongest potential to cause withdrawal symptoms if abruptly discontinued?",
-  options: ["Paroxetine", "Wellbutrin", "Sertraline", "Escitalopram"],
-  answer: 0,
-  rationale: "Paroxetine has a short half-life, leading to withdrawal symptoms."
-},
-{
-  question: "Which of the following is least likely to be associated with sedation?",
-  options: ["Mirtazapine", "Trazodone", "Fluoxetine", "Quetiapine"],
-  answer: 2,
-  rationale: "Fluoxetine is activating rather than sedating."
-},
-{
-  question: "Which antipsychotic is considered weight-neutral?",
-  options: ["Risperidone", "Ziprasidone", "Olanzapine", "Quetiapine"],
-  answer: 1,
-  rationale: "Ziprasidone is generally weight-neutral."
-},
-{
-  question: "Which anticonvulsant requires HLA-B*1502 screening?",
-  options: ["Carbamazepine", "Lamotrigine", "Valproate", "Oxcarbazepine"],
-  answer: 0,
-  rationale: "Carbamazepine requires HLA-B*1502 testing in Asian patients."
-},
-{
-  question: "True or False: SGAs are preferred over FGAs in children due to fewer EPS.",
-  options: ["True", "False"],
-  answer: 0,
-  rationale: "Second-generation antipsychotics have a lower EPS risk."
-},
-{
-  question: "Match the syndrome: EPS is associated with?",
-  options: ["Shuffling gait, rigidity", "Diaphoresis, tremor", "Facial grimacing", "Confusion"],
-  answer: 0,
-  rationale: "EPS presents with shuffling gait, dystonia, rigidity."
-},
-{
-  question: "Common fluoxetine side effect in children?",
-  options: ["Nausea", "Weight gain", "Insomnia", "Fatigue"],
-  answer: 2,
-  rationale: "Fluoxetine can cause insomnia in children."
-},
-{
-  question: "Which drug is least effective in alleviating EPS?",
-  options: ["Aripiprazole", "Benztropine", "Amantadine", "Diphenhydramine"],
-  answer: 0,
-  rationale: "Aripiprazole may worsen EPS."
-},
-{
-  question: "Which drug causes dry mouth via anticholinergic effects?",
-  options: ["Benztropine", "Trazodone", "Lithium", "Ziprasidone"],
-  answer: 0,
-  rationale: "Benztropine has strong anticholinergic side effects."
-},
-{
-  question: "True or False: Dehydration increases lithium toxicity risk.",
-  options: ["True", "False"],
-  answer: 0,
-  rationale: "Dehydration reduces lithium clearance."
-},
-{
-  question: "Which medication should be withheld in bradycardia?",
-  options: ["Risperidone", "Clonidine", "Quetiapine", "Haloperidol"],
-  answer: 1,
-  rationale: "Clonidine can dangerously lower HR and BP."
-},
-{
-  question: "Antipsychotic with highest QT prolongation risk?",
-  options: ["Ziprasidone", "Aripiprazole", "Quetiapine", "Olanzapine"],
-  answer: 0,
-  rationale: "Ziprasidone prolongs QTc and requires food for absorption."
-},
-{
-  question: "True or False: Lamotrigine must be titrated slowly.",
-  options: ["True", "False"],
-  answer: 0,
-  rationale: "Slow titration reduces risk of SJS with lamotrigine."
-},
-{
-  question: "Signs of phenytoin toxicity?",
-  options: ["Lithium toxicity", "Lamotrigine overdose", "Phenytoin toxicity", "Opioid withdrawal"],
-  answer: 2,
-  rationale: "Nystagmus and ataxia indicate phenytoin toxicity."
-},
-{
-  question: "Methylphenidate monitoring focuses on:",
-  options: ["LFTs", "Renal clearance", "Appetite and growth", "WBC count"],
-  answer: 2,
-  rationale: "Methylphenidate can stunt growth."
-},
-{
-  question: "What is a risk of anticholinergic use for EPS?",
-  options: ["Only treats dystonia", "Worsens cognition in elderly", "Prophylactic use recommended", "No role in akathisia"],
-  answer: 1,
-  rationale: "Anticholinergics worsen cognition, especially in elderly."
-},
-{
-  question: "True or False: Methylphenidate is best taken at bedtime.",
-  options: ["True", "False"],
-  answer: 1,
-  rationale: "Methylphenidate should be taken in the morning to avoid insomnia."
-},
-{
-  question: "Cogentin is used to treat:",
-  options: ["Depression", "Bipolar", "ADHD", "EPS"],
+  question: "Which anticonvulsant may cause metabolic acidosis through carbonic anhydrase inhibition?",
+  options: ["Valproate", "Topamax", "Keppra", "Zonisamide"],
   answer: 3,
-  rationale: "Cogentin treats extrapyramidal symptoms (EPS)."
+  rationale: "Zonisamide can inhibit carbonic anhydrase and cause metabolic acidosis."
 },
 {
-  question: "All contraindications to bupropion EXCEPT:",
-  options: ["Bulimia", "ADHD", "Seizure disorder", "Anorexia"],
+  question: "Which antidepressant has the highest risk of withdrawal if abruptly stopped?",
+  options: ["Fluoxetine", "Venlafaxine", "Sertraline", "Citalopram"],
   answer: 1,
-  rationale: "Bupropion is contraindicated in seizures and eating disorders, but sometimes used for ADHD."
+  rationale: "Venlafaxine has a short half-life and often causes withdrawal symptoms."
 },
 {
-  question: "Which causes serotonin syndrome?",
-  options: ["Ibuprofen", "Tramadol", "Metformin", "Haloperidol"],
-  answer: 1,
-  rationale: "Tramadol increases serotonin levels."
+  question: "Which medication is least associated with causing sedation?",
+  options: ["Paroxetine", "Trazodone", "Mirtazapine", "Escitalopram"],
+  answer: 3,
+  rationale: "Escitalopram is less sedating compared to other listed options."
 },
 {
-  question: "Which drug needs LFT monitoring?",
-  options: ["Carbamazepine", "Valproate", "Oxcarbazepine", "Lamotrigine"],
-  answer: 1,
-  rationale: "Valproate can cause hepatotoxicity."
+  question: "Which antipsychotic is least likely to cause weight gain?",
+  options: ["Clozapine", "Olanzapine", "Aripiprazole", "Quetiapine"],
+  answer: 2,
+  rationale: "Aripiprazole tends to be weight-neutral compared to other antipsychotics."
 },
 {
-  question: "True or False: Amantadine is second-line for drug-induced Parkinsonism.",
+  question: "Which anticonvulsant has the highest risk of a life-threatening rash?",
+  options: ["Lamotrigine", "Carbamazepine", "Oxcarbazepine", "Valproate"],
+  answer: 0,
+  rationale: "Lamotrigine carries a high risk for Stevens-Johnson Syndrome if titrated too fast."
+},
+{
+  question: "True or False: First-generation antipsychotics are no longer considered first-line therapy in children with psychosis.",
   options: ["True", "False"],
   answer: 0,
-  rationale: "Amantadine is second-line therapy for drug-induced parkinsonism."
+  rationale: "SGAs are preferred over FGAs for pediatric psychosis."
 },
 {
-  question: "Key feature of Neuroleptic Malignant Syndrome?",
-  options: ["Sweating and tachypnea", "Muscle rigidity and fever", "Mydriasis and diarrhea", "None"],
-  answer: 1,
-  rationale: "NMS presents with lead-pipe rigidity, fever, altered mental status."
+  question: "Which describes typical symptoms of Neuroleptic Malignant Syndrome?",
+  options: ["Fever, rigidity, altered consciousness", "Hyperreflexia, diarrhea", "Nystagmus, tremors", "Diaphoresis, confusion"],
+  answer: 0,
+  rationale: "NMS presents with rigidity, hyperthermia, and altered mental status."
 },
 {
-  question: "Which is NOT an SSRI?",
-  options: ["Escitalopram", "Venlafaxine", "Paroxetine", "Fluvoxamine"],
-  answer: 1,
-  rationale: "Venlafaxine is an SNRI."
-},
-{
-  question: "Abilify is the brand name of:",
-  options: ["Risperidone", "Quetiapine", "Aripiprazole", "Ziprasidone"],
+  question: "Which is a common side effect of sertraline in children?",
+  options: ["Weight gain", "Constipation", "Insomnia", "Sedation"],
   answer: 2,
-  rationale: "Abilify = Aripiprazole."
+  rationale: "Sertraline may cause insomnia especially early in therapy."
 },
 {
-  question: "SSRI with longest half-life?",
-  options: ["Fluoxetine", "Sertraline", "Escitalopram", "Citalopram"],
+  question: "Which medication would NOT help reduce EPS symptoms?",
+  options: ["Benztropine", "Propranolol", "Diphenhydramine", "Amantadine"],
+  answer: 1,
+  rationale: "Propranolol helps akathisia but not classic EPS."
+},
+{
+  question: "Which drug can cause dry mouth through anticholinergic effects?",
+  options: ["Clonidine", "Benztropine", "Ziprasidone", "Lithium"],
+  answer: 1,
+  rationale: "Benztropine has strong anticholinergic activity."
+},
+{
+  question: "True or False: Patients should maintain hydration while on lithium.",
+  options: ["True", "False"],
   answer: 0,
-  rationale: "Fluoxetine has the longest half-life."
+  rationale: "Dehydration increases risk of lithium toxicity."
 },
 {
-  question: "Which anxiolytic has lowest abuse potential?",
-  options: ["Diazepam", "Alprazolam", "Buspirone", "Lorazepam"],
+  question: "Which medication should be held if blood pressure drops below 90/60 mmHg?",
+  options: ["Seroquel", "Clonidine", "Olanzapine", "Aripiprazole"],
+  answer: 1,
+  rationale: "Clonidine can cause profound hypotension."
+},
+{
+  question: "Which medication is associated with QTc prolongation and should be taken with food?",
+  options: ["Quetiapine", "Ziprasidone", "Aripiprazole", "Olanzapine"],
+  answer: 1,
+  rationale: "Ziprasidone requires food for absorption and prolongs QTc."
+},
+{
+  question: "True or False: Doses of lamotrigine must be slowly titrated to prevent severe rash.",
+  options: ["True", "False"],
+  answer: 0,
+  rationale: "Slow titration reduces risk of Stevens-Johnson Syndrome."
+},
+{
+  question: "Ataxia, blurred vision, and nystagmus are signs of which toxicity?",
+  options: ["Valproate", "Phenytoin", "Lithium", "Topiramate"],
+  answer: 1,
+  rationale: "Phenytoin toxicity causes cerebellar symptoms like ataxia and nystagmus."
+},
+{
+  question: "What side effect should be monitored in a child on atomoxetine?",
+  options: ["Platelet count", "Height and weight", "Blood glucose", "Renal function"],
+  answer: 1,
+  rationale: "Stimulants like atomoxetine may reduce appetite and growth."
+},
+{
+  question: "What is true about anticholinergic agents for EPS?",
+  options: ["They are prophylactically given to all patients.", "They worsen cognition in elderly.", "They are only useful for akathisia.", "They are used as first-line therapy for psychosis."],
+  answer: 1,
+  rationale: "Anticholinergics can worsen cognition, especially in elderly patients."
+},
+{
+  question: "True or False: Methylphenidate should be given in the morning.",
+  options: ["True", "False"],
+  answer: 0,
+  rationale: "Morning dosing reduces risk of insomnia with stimulants."
+},
+{
+  question: "What is the primary indication for benztropine (Cogentin)?",
+  options: ["Mania", "ADHD", "EPS", "Insomnia"],
   answer: 2,
-  rationale: "Buspirone is non-habit forming."
+  rationale: "Benztropine treats extrapyramidal symptoms (EPS)."
 },
 {
-  question: "FDA-approved meds for irritability in autism?",
-  options: ["Risperidone and Aripiprazole", "Haloperidol and Olanzapine", "Quetiapine and Ziprasidone", "Lurasidone and Clozapine"],
-  answer: 0,
-  rationale: "Risperidone and Aripiprazole are FDA-approved."
+  question: "Bupropion is contraindicated in patients with all EXCEPT:",
+  options: ["Seizure disorder", "Bulimia", "Anorexia", "ADHD"],
+  answer: 3,
+  rationale: "Bupropion is used off-label for ADHD but contraindicated in seizure disorders and eating disorders."
 },
 {
-  question: "Bupropion should be avoided in patients with:",
-  options: ["Seizure disorder", "Bipolar disorder", "Depression", "Anxiety"],
+  question: "Which medication is associated with serotonin syndrome risk?",
+  options: ["Ibuprofen", "Fentanyl", "Lorazepam", "Risperidone"],
+  answer: 1,
+  rationale: "Fentanyl may contribute to serotonin syndrome, especially with other serotonergic agents."
+},
+{
+  question: "Which medication has a black box warning for liver toxicity?",
+  options: ["Lamotrigine", "Topiramate", "Divalproex", "Carbamazepine"],
+  answer: 2,
+  rationale: "Divalproex (Depakote) carries liver toxicity risk."
+},
+{
+  question: "True or False: Amantadine is first-line treatment for Parkinson disease.",
+  options: ["True", "False"],
+  answer: 1,
+  rationale: "Amantadine is second-line for Parkinson symptoms."
+},
+{
+  question: "NMS is most commonly caused by which of the following?",
+  options: ["Antipsychotics", "Antidepressants", "Stimulants", "Opioids"],
   answer: 0,
+  rationale: "NMS is a reaction to dopamine antagonism from antipsychotics."
+},
+{
+  question: "Which of the following is NOT an SSRI?",
+  options: ["Fluvoxamine", "Duloxetine", "Paroxetine", "Escitalopram"],
+  answer: 1,
+  rationale: "Duloxetine is an SNRI."
+},
+{
+  question: "What is the brand name of risperidone?",
+  options: ["Zyprexa", "Abilify", "Risperdal", "Geodon"],
+  answer: 2,
+  rationale: "Risperdal is risperidone's brand name."
+},
+{
+  question: "Which SSRI has the shortest half-life?",
+  options: ["Paroxetine", "Fluoxetine", "Citalopram", "Sertraline"],
+  answer: 0,
+  rationale: "Paroxetine has a very short half-life, leading to withdrawal risk."
+},
+{
+  question: "Which benzodiazepine has the highest abuse potential?",
+  options: ["Alprazolam", "Diazepam", "Lorazepam", "Buspirone"],
+  answer: 0,
+  rationale: "Alprazolam (Xanax) has a fast onset, high abuse potential."
+},
+{
+  question: "Which drugs are FDA-approved for treating autism-related irritability?",
+  options: ["Risperdal and Abilify", "Haldol and Zyprexa", "Geodon and Seroquel", "Latuda and Clozapine"],
+  answer: 0,
+  rationale: "Risperdal (risperidone) and Abilify (aripiprazole) are FDA-approved."
+},
+{
+  question: "Bupropion must be avoided in patients with:",
+  options: ["Depression", "Seizure disorder", "Anxiety", "ADHD"],
+  answer: 1,
   rationale: "Bupropion lowers seizure threshold."
 },
 {
-  question: "Malnourished alcoholic with confusion, gait instability, nystagmus likely has:",
-  options: ["Wernicke encephalopathy", "Korsakoff syndrome", "Alcohol hallucinosis", "Withdrawal"],
+  question: "A patient with chronic alcoholism develops confusion, nystagmus, and gait instability. Diagnosis?",
+  options: ["Wernicke's encephalopathy", "Delirium tremens", "Alcohol hallucinosis", "Alcohol withdrawal"],
   answer: 0,
-  rationale: "Classic Wernicke's signs."
+  rationale: "Classic triad: confusion, ataxia, nystagmus = Wernicke's."
 },
 {
-  question: "Lithium toxicity is more likely in patients with impaired:",
-  options: ["Liver function", "Renal function", "Cardiac conduction", "Pulmonary function"],
+  question: "Lithium toxicity risk increases most in:",
+  options: ["Liver impairment", "Renal impairment", "Diabetes", "Heart failure"],
   answer: 1,
-  rationale: "Lithium is renally cleared."
+  rationale: "Lithium is renally cleared; renal impairment increases toxicity."
 }
 ];
-    function loadQuiz() {
-      const form = document.getElementById("quiz-form");
-      const shuffled = quizData.sort(() => 0.5 - Math.random());
-      shuffled.forEach((q, i) => {
-        const questionDiv = document.createElement("div");
-        questionDiv.className = "question";
-        questionDiv.innerHTML = `<h3>${i + 1}. ${q.question}</h3>`;
-        const options = q.options.map((opt, idx) =>
-          `<label><input type='radio' name='q${i}' value='${idx}'> ${opt}</label>`
-        ).join('');
-        questionDiv.innerHTML += `<div class='options'>${options}</div>`;
-        form.appendChild(questionDiv);
-      });
-    }
+function loadQuiz() {
+  const form = document.getElementById("quiz-form");
+  const shuffled = quizData.sort(() => 0.5 - Math.random());
+  shuffled.forEach((q, i) => {
+    const questionDiv = document.createElement("div");
+    questionDiv.className = "question";
+    questionDiv.innerHTML = `<h3>${i + 1}. ${q.question}</h3>`;
+    const options = q.options.map((opt, idx) =>
+      `<label><input type='radio' name='q${i}' value='${idx}'> ${opt}</label>`
+    ).join('');
+    questionDiv.innerHTML += `<div class='options'>${options}</div>`;
+    form.appendChild(questionDiv);
+  });
+}
 
-    function submitQuiz() {
-      const form = document.getElementById("quiz-form");
-      const results = document.getElementById("results");
-      results.innerHTML = "";
-      let score = 0;
-      quizData.forEach((q, i) => {
-        const selected = form[`q${i}`].value;
-        const correct = q.answer.toString();
-        const isCorrect = selected === correct;
-        if (isCorrect) score++;
-        const resultHTML = `<p>${i + 1}. ${q.question}<br>
-          <span class='${isCorrect ? "correct" : "incorrect"}'>Your answer: ${q.options[selected] || "No answer"}</span><br>
-          <strong class='correct'>Correct answer: ${q.options[q.answer]}</strong><br>
-          <em>${q.rationale}</em></p>`;
-        results.innerHTML += resultHTML;
-      });
-      const percentage = ((score / quizData.length) * 100).toFixed(2);
-      results.innerHTML = `<h3>You scored ${score}/${quizData.length} (${percentage}%)</h3>` + results.innerHTML;
-    }
-  </script>
+function submitQuiz() {
+  const form = document.getElementById("quiz-form");
+  const results = document.getElementById("results");
+  results.innerHTML = "";
+  let score = 0;
+  quizData.forEach((q, i) => {
+    const selected = form[`q${i}`].value;
+    const correct = q.answer.toString();
+    const isCorrect = selected === correct;
+    if (isCorrect) score++;
+    const resultHTML = `<p>${i + 1}. ${q.question}<br>
+      <span class='${isCorrect ? "correct" : "incorrect"}'>Your answer: ${q.options[selected] || "No answer"}</span><br>
+      <strong class='correct'>Correct answer: ${q.options[q.answer]}</strong><br>
+      <em>${q.rationale}</em></p>`;
+    results.innerHTML += resultHTML;
+  });
+  const percentage = ((score / quizData.length) * 100).toFixed(2);
+  results.innerHTML = `<h3>You scored ${score}/${quizData.length} (${percentage}%)</h3>` + results.innerHTML;
+}
+</script>
 </body>
 </html>
